--- a/package/batocera/emulationstation/batocera-es-system/locales/cs_CZ/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/cs_CZ/batocera-es-system.po
@@ -23,7 +23,7 @@ msgctxt "game_options"
 msgid "VIDEO MODE"
 msgstr "REŽIM VIDEA"
 
-#. TRANSLATION: shared, dolphin, flycast, mupen64plus, xemu, ...
+#. TRANSLATION: shared
 msgctxt "game_options"
 msgid "GAME ASPECT RATIO"
 msgstr "HERNÍ POMĚR STRAN"
@@ -58,7 +58,7 @@ msgctxt "game_options"
 msgid "Gameplay Rewinding"
 msgstr ""
 
-#. TRANSLATION: shared, shared
+#. TRANSLATION: shared, shared, awgl
 msgctxt "game_options"
 msgid "GAME PLAY"
 msgstr ""
@@ -218,7 +218,7 @@ msgctxt "game_options"
 msgid "AI GAME TRANSLATION"
 msgstr ""
 
-#. TRANSLATION: shared, shared, shared, shared
+#. TRANSLATION: shared, shared, shared, shared, sonic2013, ...
 msgctxt "game_options"
 msgid "GAME TRANSLATION"
 msgstr ""
@@ -314,11 +314,6 @@ msgstr "THREADED VIDEO"
 msgctxt "game_options"
 msgid "Emulate Chroma 81 interface (colorization)."
 msgstr "Emulace rozhraní Chroma 81 (vybarvení)."
-
-#. TRANSLATION: libretro/81, libretro/81, libretro/atari800, libretro/atari800, libretro/atari800, ...
-msgctxt "game_options"
-msgid "ADVANCED OPTIONS"
-msgstr ""
 
 #. TRANSLATION: libretro/81, libretro/gambatte
 msgctxt "game_options"
