--- a/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
@@ -28,7 +28,7 @@ msgctxt "game_options"
 msgid "VIDEO MODE"
 msgstr "MODO DE VÍDEO"
 
-#. TRANSLATION: shared, dolphin, flycast, mupen64plus, xemu, ...
+#. TRANSLATION: shared
 msgctxt "game_options"
 msgid "GAME ASPECT RATIO"
 msgstr "RELACIÓN DE ASPECTO DEL JUEGO"
@@ -63,7 +63,7 @@ msgctxt "game_options"
 msgid "Gameplay Rewinding"
 msgstr ""
 
-#. TRANSLATION: shared, shared
+#. TRANSLATION: shared, shared, awgl
 msgctxt "game_options"
 msgid "GAME PLAY"
 msgstr ""
@@ -223,7 +223,7 @@ msgctxt "game_options"
 msgid "AI GAME TRANSLATION"
 msgstr "TRADUÇÃO DO TEXTO DO JOGO POR IA"
 
-#. TRANSLATION: shared, shared, shared, shared
+#. TRANSLATION: shared, shared, shared, shared, sonic2013, ...
 msgctxt "game_options"
 msgid "GAME TRANSLATION"
 msgstr ""
@@ -320,11 +320,6 @@ msgstr "VIDEO MEJORADO"
 msgctxt "game_options"
 msgid "Emulate Chroma 81 interface (colorization)."
 msgstr "Emular interfaz Chroma 81 (colonización)"
-
-#. TRANSLATION: libretro/81, libretro/81, libretro/atari800, libretro/atari800, libretro/atari800, ...
-msgctxt "game_options"
-msgid "ADVANCED OPTIONS"
-msgstr "OPCIONES AVANZADAS"
 
 #. TRANSLATION: libretro/81, libretro/gambatte
 msgctxt "game_options"
@@ -9167,6 +9162,10 @@ msgstr ""
 msgctxt "game_options"
 msgid "EGA GRAPHICS MODE"
 msgstr ""
+
+#~ msgctxt "game_options"
+#~ msgid "ADVANCED OPTIONS"
+#~ msgstr "OPCIONES AVANZADAS"
 
 #~ msgctxt "game_options"
 #~ msgid "CONTROLLER TYPE 1"
