--- a/package/batocera/emulationstation/batocera-es-system/locales/pl/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/pl/batocera-es-system.po
@@ -29,7 +29,7 @@ msgctxt "game_options"
 msgid "VIDEO MODE"
 msgstr "TRYB WIDEO"
 
-#. TRANSLATION: shared, dolphin, flycast, mupen64plus, xemu, ...
+#. TRANSLATION: shared
 msgctxt "game_options"
 msgid "GAME ASPECT RATIO"
 msgstr "PROPORCJE GRY"
@@ -64,7 +64,7 @@ msgctxt "game_options"
 msgid "Gameplay Rewinding"
 msgstr ""
 
-#. TRANSLATION: shared, shared
+#. TRANSLATION: shared, shared, awgl
 msgctxt "game_options"
 msgid "GAME PLAY"
 msgstr ""
@@ -224,7 +224,7 @@ msgctxt "game_options"
 msgid "AI GAME TRANSLATION"
 msgstr "TŁUMACZENIE GRY Z SI"
 
-#. TRANSLATION: shared, shared, shared, shared
+#. TRANSLATION: shared, shared, shared, shared, sonic2013, ...
 msgctxt "game_options"
 msgid "GAME TRANSLATION"
 msgstr ""
@@ -317,11 +317,6 @@ msgstr "WIELOWĄTKOWE WIDEO"
 msgctxt "game_options"
 msgid "Emulate Chroma 81 interface (colorization)."
 msgstr "Emuluj interfejs Chroma 81 (koloryzacja)."
-
-#. TRANSLATION: libretro/81, libretro/81, libretro/atari800, libretro/atari800, libretro/atari800, ...
-msgctxt "game_options"
-msgid "ADVANCED OPTIONS"
-msgstr "OPCJE ZAAWANSOWANE"
 
 #. TRANSLATION: libretro/81, libretro/gambatte
 msgctxt "game_options"
@@ -9166,6 +9161,10 @@ msgstr ""
 msgctxt "game_options"
 msgid "EGA GRAPHICS MODE"
 msgstr ""
+
+#~ msgctxt "game_options"
+#~ msgid "ADVANCED OPTIONS"
+#~ msgstr "OPCJE ZAAWANSOWANE"
 
 #~ msgctxt "game_options"
 #~ msgid "CONTROLLER TYPE 1"
