--- a/package/batocera/emulationstation/batocera-es-system/locales/ru_RU/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/ru_RU/batocera-es-system.po
@@ -23,7 +23,7 @@ msgctxt "game_options"
 msgid "VIDEO MODE"
 msgstr "ВИДЕО РЕЖИМ"
 
-#. TRANSLATION: shared, dolphin, flycast, mupen64plus, xemu, ...
+#. TRANSLATION: shared
 msgctxt "game_options"
 msgid "GAME ASPECT RATIO"
 msgstr "СООТНОШЕНИЕ СТОРОН ИГРЫ"
@@ -58,7 +58,7 @@ msgctxt "game_options"
 msgid "Gameplay Rewinding"
 msgstr ""
 
-#. TRANSLATION: shared, shared
+#. TRANSLATION: shared, shared, awgl
 msgctxt "game_options"
 msgid "GAME PLAY"
 msgstr ""
@@ -218,7 +218,7 @@ msgctxt "game_options"
 msgid "AI GAME TRANSLATION"
 msgstr ""
 
-#. TRANSLATION: shared, shared, shared, shared
+#. TRANSLATION: shared, shared, shared, shared, sonic2013, ...
 msgctxt "game_options"
 msgid "GAME TRANSLATION"
 msgstr ""
@@ -309,11 +309,6 @@ msgstr "МНОГОПОТОЧНОЕ ВИДЕО"
 msgctxt "game_options"
 msgid "Emulate Chroma 81 interface (colorization)."
 msgstr "Эмуляция интерфейса Chroma 81 (колоризация)."
-
-#. TRANSLATION: libretro/81, libretro/81, libretro/atari800, libretro/atari800, libretro/atari800, ...
-msgctxt "game_options"
-msgid "ADVANCED OPTIONS"
-msgstr ""
 
 #. TRANSLATION: libretro/81, libretro/gambatte
 msgctxt "game_options"
